kubernetes-gateway-api-hands-on/exercises/01-gatewayclass-and-gateway/exercise/gateway.yaml
# A Gateway requests networking infrastructure from a particular GatewayClass.
# the gateway object deploys a service automatically
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lab-gateway
  namespace: gateway-lab
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.gateway.local"
      allowedRoutes:
        namespaces:
          from: Same
